@@ -6,7 +6,7 @@ import java.util.List;
 
 final class Solucion1 {
     // Tomar este metodo como base
-    static boolean iguales(int[] arrA, int[] arrB) {
+    static <T> boolean iguales(T[] arrA, T[] arrB) {
       for (int i = 0; i < arrA.length; i++) {
         if (arrA[i] != arrB[i])
           return false;
@@ -16,8 +16,8 @@ final class Solucion1 {
   }
 
 final class Solucion2 {
-    public static List<Object> invierte(List<Object> lista) {
-      List<Object> nueva = new ArrayList<Object>();
+    public static <T> List<T> invierte(List<T> lista) {
+      List<T> nueva = new ArrayList<T>();
 
       for(int i = lista.size()-1; i>=0; i--){
         nueva.add(lista.get(i));
@@ -36,15 +36,22 @@ public class Genericos {
     System.out.println("\n\nTema 13: Genericos");
     System.out.println("\nEjercicio 1");
 
-    int arrayA[] = {1, 2, 3};
-    int arrayB[] = {1, 2, 3};
-    int arrayC[] = {2, 1, 3};
+    Integer arrayA[] = {1, 2, 3};
+    Integer arrayB[] = {1, 2, 3};
+    Integer arrayC[] = {2, 1, 3};
     String arrayD[] = {"teclado", "raton", "monitor"};
     String arrayE[] = {"teclado", "raton", "monitor"};
     String arrayF[] = {"teclado", "webcam", "monitor"};
 
     boolean resultado = Solucion1.iguales(arrayA, arrayB);
     System.out.println("ArrayA y arrayB son iguales: " + resultado);
+    resultado = Solucion1.iguales(arrayA, arrayC);
+    System.out.println("ArrayA y arrayC son iguales: " + resultado);
+    
+    resultado = Solucion1.<String>iguales(arrayD, arrayE);
+    System.out.println("ArrayD y arrayE son iguales: " + resultado);
+    resultado = Solucion1.iguales(arrayE, arrayF);
+    System.out.println("ArrayE y arrayF son iguales: " + resultado);
   }
 
   /*
@@ -53,13 +60,13 @@ public class Genericos {
   public static void ejercicio02() {
     System.out.println("\nEjercicio 2");
 
-    List<Object> palabras = Arrays.asList("playa", "arbol", "oceano", "montaña");
-    // List<String> palabras = List.of("playa", "arbol", "oceano", "montaña");
+//    List<Object> palabras = Arrays.asList("playa", "arbol", "oceano", "montaña");
+    List<String> palabras = Arrays.asList("playa", "arbol", "oceano", "montaña");
 
     System.out.println("Lista en orden original:");
     System.out.println(palabras);
     System.out.println("Nueva lista en orden inverso");
-    List<Object> resultado = Solucion2.invierte(palabras);
+    List<String> resultado = Solucion2.invierte(palabras);
     System.out.println(resultado);
 
 
